fix: spacing and updated introduction text

--- a/src/startskudd/startskudd.module.css
+++ b/src/startskudd/startskudd.module.css
@@ -74,6 +74,7 @@
 
   .startskudd__section1 {
     min-width: 41rem;
+    margin-right: 7rem;
   }
 }
 
